--- a/MAR Map.html
+++ b/MAR Map.html
@@ -7,15 +7,15 @@
     <title>MAR Teams and Events</title>
 
     <script type="text/javascript" src="./jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="./jquery-ui-1.11.14/jquery-ui.js"></script>
-    <link rel="stylesheet" href="./jquery-ui-1.11.14/jquery-ui.css">
+    <script type="text/javascript" src="./jquery-ui.js"></script>
+    <link rel="stylesheet" href="./jquery-ui.css">
 
     <script type="text/javascript" src="./jquery-ui-slider-pips.js"></script>
     <link rel="stylesheet" href="./jquery-ui-slider-pips.css">
 
     <!-- DataTables -->
-    <script type="text/javascript" charset="utf8"src="./DataTables-1.10.7/media/js/jquery.dataTables.js"></script>
-    <link rel="stylesheet" type="text/css" href="./DataTables-1.10.7/media/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8"src="./jquery.dataTables.js"></script>
+    <link rel="stylesheet" type="text/css" href="./jquery.dataTables.css">
 
   <style>
     body { font-family: Open Sans, sans-serif; }
